--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "start": "electron-forge start",
-    "dev": "env-cmd electron-vite dev",
+    "dev": "electron-vite dev",
     "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:win": "npm run build && env-cmd electron-builder --win --config",
-    "build:mac": "npm run build && env-cmd electron-builder --mac --config",
-    "build:linux": "npm run build && env-cmd electron-builder --linux --config",
-    "afterSign": "scripts/notarize.js"
+    "build:win": "npm run build && electron-builder --win --config",
+    "build:mac": "npm run build && electron-builder --mac --config",
+    "build:linux": "npm run build && electron-builder --linux --config"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
