--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "diff": "^5.1.0",
     "electron-store": "^8.1.0",
     "lucide-svelte": "^0.259.0",
-    "openai": "^3.3.0",
+    "openai": "^4.28.0",
     "svelte-floating-ui": "^1.5.3",
     "svelte-i18n": "^3.7.0"
   },
   "devDependencies": {
     "@danielsharkov/svelte-router": "^4.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "@types/node": "^20.10.5",
     "autoprefixer": "^10.4.14",
     "electron": "^24.6.2",
     "electron-builder": "^24.4.0",
